--- a/templates/join.html
+++ b/templates/join.html
@@ -6,94 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-
-
-    <script>
-        
-        function joincall() {
-            $.ajax({
-                type: "POST",
-                url: "/join",
-                data: {
-                    email_give: $('#email').val(),
-                    password_give: $('#password').val(),
-                    name_give: $('#name').val()
-                },
-                success: function (response) {
-                    if (response['result'] == 'success') {
-                        alert('회원가입이 완료되었습니다.')
-                        // window.location.href = '/join_finish'
-                    } else {
-                        alert(response['msg'])
-                    }
-                }
-            })
-        }
-    </script>
-
+    <link href="/static/css/join.css" rel="stylesheet">
+    <script src="/static/js/navbar.js" defer></script>
 </head>
 <body>
-    <div class="login">
-      <div class="nav-bar">
-        <nav class="navbar bg-light fixed-top">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">오메추!</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">오메추</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">메인화면</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/roulette">랜덤 룰렛</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/test">메뉴 추천</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/board">게시판</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      내정보
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">내정보 보기</a></li>
-                      <li><a class="dropdown-item" href="#">로그인</a></li>
-                      <li><a class="dropdown-item" href="#">로그아웃</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </nav>
-            
-      </div>
-      <div class="join_main">
+    <div>
+      <main-nav-bar></main-nav-bar>
+      <!-- <div class="join_page">
         <h2 class="join_text">회원 정보를 입력해주세요.</h2>
         닉네임: <input id="name" type="text" />
         id: <input id="email" type="email" />
         이메일주소를 입력해주세요. 이메일 주소가 아이디입니다.
         pw: <input id="password" type="password" />
-        <button type="submit" onclick="joincall()"> 가입하기 </button>
-      </div>
+        <button type="submit" onclick="join()"> 가입하기 </button>
+      </div> -->
+      <div class="wrap">
+        <div class="login">
+            <h2>오메추!</h2>
+            <div class="login_id">
+              <h4>닉네임</h4>
+              <input type="email" id="name" placeholder="Nickname">
+          </div>
+            <div class="login_id">
+                <h4>이메일</h4>
+                <input type="email" name="" id="email" placeholder="Email">
+            </div>
+            <div class="login_pw">
+                <h4>비밀번호</h4>
+                <input type="password" name="" id="password" placeholder="Password">
+            </div>
+            <div class="submit">
+                <input class="mb-3" type="submit" onclick="joinCall()" value="회원가입">
+                <p class="submit_text">이미 오메추의 회원이라면??</p>
+                <input type="submit" onclick="location.href='/login'" value="로그인하러가기">
+            </div>
+        </div>
+    </div>
     </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/static/index.js"></script>
+    <script type="text/javascript" src="/static/js/join.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </body>
 </html>
