--- a/templates/test.html
+++ b/templates/test.html
@@ -52,7 +52,7 @@
         </article>
         <!-- 결과창 -->
         <article class="menu_result">
-            
+            <h1 class=""></h1>
         </article>
         <input type="hidden" id ="q1" value="0">
         <input type="hidden" id ="q2" value="0">
