--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/static/js/navbar.js" defer></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -15,7 +14,7 @@
     <br>
     <br>
     <div class="container my-3">
-        <!-- 질문 -->
+        <!-- 게시글 -->
         <h2 class="border-bottom py-2">{{ board.title }}</h2>
         <div class="card my-3">
             <div class="card-body">
@@ -27,8 +26,8 @@
                 </div>
             </div>
         </div>
-        <!-- 답변 목록 -->
-        <h5 class="border-bottom my-3 py-2">{{ board.comment_set|length }}개의 답변이 있습니다.</h5>
+        <!-- 댓글 목록 -->
+        <h5 class="border-bottom my-3 py-2">{{ board.comment_set|length }}개의 댓글이 있습니다.</h5>
         {% for answer in board.comment_set %}
         <div class="card my-3">
             <div class="card-body">
@@ -41,7 +40,7 @@
             </div>
         </div>
         {% endfor %}
-        <!-- 답변 등록 -->
+        <!-- 댓글 등록 -->
         <form action="{{ url_for('comment.create', board_index=board.index) }}" method="post" class="my-3">        
             {{ form.csrf_token }}
             <!-- 오류표시 Start -->
@@ -65,6 +64,7 @@
             <a href="{{ url_for('board._list') }}" class="btn btn-secondary" style="float: right">돌아가기</a>
         </form>
     </div>
+    <script src=“https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js” integrity=“sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin=“anonymous”></script>
 </body>
 
 <!-- 
