--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -14,7 +14,7 @@
     <br>
     <br>
     <div class="container">
-        <h5 class="my-3 border-bottom pb-2">질문등록</h5>
+        <h5 class="my-3 border-bottom pb-2">게시글 작성</h5>
         <form method="post" class="my-3">  
             {{ form.csrf_token }}     
             <!-- 오류표시 Start -->
@@ -32,16 +32,17 @@
             {% endif %}
             <!-- 오류표시 End -->
             <div class="mb-3">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" name="title" id="title" value="{{ form.title.data or '' }}">
+                <label for="title" style="margin-bottom:5px">제목</label>
+                <input type="text" class="form-control" name="title" id="title" value="{{ form.title.data or '' }}" placeholder="제목 입력">
             </div>
             <div class="mb-3">
-                <label for="content">내용</label>
-                <textarea class="form-control" name="content" id="content" rows="10" >{{ form.content.data or '' }}</textarea>
+                <label for="content" style="margin-bottom:5px">내용</label>
+                <textarea class="form-control" name="content" id="content" rows="10" placeholder="내용 입력">{{ form.content.data or '' }}</textarea>
             </div>
             <button type="submit" class="btn btn-primary">저장하기</button>
         </form>
     </div>
+    <script src=“https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js” integrity=“sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin=“anonymous”></script>
 </body>
 
 <!-- <div class="container">
