--- a/templates/board_list.html
+++ b/templates/board_list.html
@@ -25,13 +25,14 @@
     <!-- 검색 -->    
     <div class="row my-3">
         <div class="col-6">
-            <a href="{{ url_for('board.create') }}" class="btn btn-primary">질문 등록하기</a>
+            <a href="{{ url_for('board.create') }}" class="btn btn-primary">게시글 작성</a>
         </div>
         <div class="col-6">
             <div class="input-group">
-                <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}" onkeyup="if(window.event.keyCode==13){btn_search}">
+                <input type="text" id="search_kw" class="form-control" value="{{ kw or '' }}" style="margin-right:10px">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="btn_search">찾기</button>
+                    <button class="btn btn-outline-secondary" type="button" id="btn_search">검색</button>
+                    <button class="btn btn-outline-danger" type="button" id="btn_search_reset">리셋</button>
                 </div>
             </div>
         </div>
@@ -48,18 +49,24 @@
         </thead>
         <tbody>
         {% if board_list %}
-            {% for board in board_list.items %}
-                <tr>
-                    <td>{{ board.index }}</td>
-                    <td>
-                        <a href="{{ url_for('board.detail', board_index=board.index) }}">{{ board.title }}</a>                
-                        {% if board.comment_set|length > 0 %}
-                        <span class="text-secondary small mx-2">[{{ board.comment_set|length }}]</span>
-                        {% endif %}
-                    </td>
-                    <td>{{ board.datetime|datetime }}</td>
-                </tr>
-            {% endfor %}
+            {% if board_list.items %}
+                {% for board in board_list.items %}
+                    <tr>
+                        <td>{{ board.index }}</td>
+                        <td>
+                            <a href="{{ url_for('board.detail', board_index=board.index) }}">{{ board.title }}</a>                
+                            {% if board.comment_set|length > 0 %}
+                            <span class="text-secondary small mx-2">[{{ board.comment_set|length }}]</span>
+                            {% endif %}
+                        </td>
+                        <td>{{ board.datetime|datetime }}</td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+            <tr>
+                <td colspan="3">검색 결과가 없어요!</td>
+            </tr>
+            {% endif %}
         {% else %}
             <tr>
                 <td colspan="3">게시글이 하나도 없어요!</td>
@@ -148,6 +155,12 @@
         btn_search.addEventListener('click', function() {
             document.getElementById('kw').value = document.getElementById('search_kw').value;
             document.getElementById('page').value = 1;  // 검색버튼을 클릭할 경우 1페이지부터 조회한다.
+            document.getElementById('searchForm').submit();
+        });
+        const btn_search_reset = document.getElementById("btn_search_reset");
+        btn_search_reset.addEventListener('click', function() {
+            document.getElementById('kw').value = ''
+            document.getElementById('page').value = 1;
             document.getElementById('searchForm').submit();
         });
     </script>
