--- a/templates/join.html
+++ b/templates/join.html
@@ -25,15 +25,16 @@
             <h2>오메추!</h2>
             <div class="login_id">
               <h4>닉네임</h4>
-              <input type="email" id="name" placeholder="Nickname">
+              <input type="text" id="name" placeholder="Nickname" required>
           </div>
             <div class="login_id">
                 <h4>이메일</h4>
-                <input type="email" name="" id="email" placeholder="Email">
+                <input type="email" name="email" id="email" placeholder="Email" minlength="5" required>
+                <div id="error_mail" class="result-email result-check"></div>
             </div>
             <div class="login_pw">
                 <h4>비밀번호</h4>
-                <input type="password" name="" id="password" placeholder="Password">
+                <input type="password" name="" id="password" placeholder="Password" required>
             </div>
             <div class="submit">
                 <input class="mb-3" type="submit" onclick="joinCall()" value="회원가입">
@@ -48,6 +49,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/static/js/join.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- 이메일 검증 -->
+    <script>
+        function email_check( email ) {    
+            var regex=/([\w-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
+            return (email != '' && email != 'undefined' && regex.test(email)); 
+        }
+
+        $("input[type=email]").blur(function(){
+        var email = $(this).val();
+        if( email == '' || email == 'undefined') return;
+        if(! email_check(email) ) {
+            $(".result-email").text('이메일 형식으로 적어주세요');
+            $(this).focus();
+            return false;
+        }else {
+            $(".result-email").text('');
+        }
+        });
+    </script>
 
 </body>
 </html>
