--- a/templates/board_detail.html
+++ b/templates/board_detail.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/static/js/navbar.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="/static/js/navbar.js" defer></script>
+    <script src="/static/js/board_detail.js" defer></script>
 </head>
 
 <body>
@@ -16,12 +19,13 @@
     <div class="container my-3">
         <!-- 게시글 -->
         <h2 class="border-bottom py-2">{{ board.title }}</h2>
+
         <div class="card my-3">
             <div class="card-body">
                 <div class="card-text" style="white-space: pre-line;">{{ board.content }}</div>
                 <div class="d-flex justify-content-end">
                     <div class="badge bg-light text-dark p-2">
-                        {{ board.datetime|datetime }}
+                        {{ board.datetime|datetime }} | {{ board.user }}
                     </div>
                 </div>
             </div>
@@ -34,7 +38,7 @@
                 <div class="card-text" style="white-space: pre-line;">{{ answer.content }}</div>
                 <div class="d-flex justify-content-end">
                     <div class="badge bg-light text-dark p-2">
-                        {{ answer.datetime|datetime }}
+                        {{ answer.datetime|datetime }} | by {{ answer.user }}
                     </div>
                 </div>
             </div>
@@ -59,12 +63,14 @@
             <!-- 오류표시 End -->
             <div class="mb-3">
                 <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+                <input type="hidden" id="login_name" name="login_name" value="{{ login_name }}">
             </div>
-            <input type="submit" value="답변등록" class="btn btn-primary">
+            <input type="submit" value="댓글 등록" class="btn btn-primary">
             <a href="{{ url_for('board._list') }}" class="btn btn-secondary" style="float: right">돌아가기</a>
         </form>
     </div>
-    <script src=“https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js” integrity=“sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin=“anonymous”></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin=“anonymous”></script>
 </body>
 
 <!-- 
