--- a/templates/ladder.html
+++ b/templates/ladder.html
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     />
     <link href="/static/css/ladder.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="/static/js/navbar.js" defer></script>
     <title>Document</title>
     <link href="/static/css/roulette.css" rel="stylesheet">
