--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -22,6 +22,7 @@
             <button class="user_btn">비번 변경하기</button>
             <button class="user_btn">내가 쓴 글 조회하기</button>
             <button class="user_btn">문의하기</button>
+            <button class="user_btn">회원 탈퇴하기</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
