--- a/templates/member_del.html
+++ b/templates/member_del.html
@@ -9,6 +9,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="/static/css/user_page.css" rel="stylesheet">
     <script src="/static/js/member_del.js" defer></script>
+    
+    <!--jquery cookie를 사용하기 위해 head영역에 둬야함.-->
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js" defer></script>
+
 
 
 </head>
