--- a/templates/board_form.html
+++ b/templates/board_form.html
@@ -47,8 +47,8 @@
                 <input type="file" id="file_upload" name="file_upload" />  
             </div>
             <button type="submit" class="btn btn-primary">저장하기</button>
-            <input id="login_name" name="login_name" value="" >
-            <input id="login_email" name="login_email" value="">
+            <input type="hidden" id="login_name" name="login_name" value="" >
+            <input type="hidden" id="login_email" name="login_email" value="">
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
