--- a/templates/qna.html
+++ b/templates/qna.html
@@ -31,8 +31,11 @@
 
             <div class="mypost" id="posting-box">
                 <div class="user_information">
-                    <h2 id="user_id"></h2>
-                    <h4 id="user_email"></h4>
+                    <text id="user_id"></text>
+                    <br>
+                    <text>순차 확인 후 아래 이메일로 답변드리도록 하겠습니다.</text>
+                    <br>
+                    <text id="user_email"></text>
                 </div>
                 <div class="form-floating">
                     <textarea id="comment" class="form-control" placeholder="문의 내용"></textarea>
